# cogstack-nlp

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
medcat-v2/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
medcat-v2/.github/workflows/: main.yml  release.yml
medcat-v2/.release/: README.md  prepare_minor_release.sh  prepare_patch_release.sh  prepare_release.sh
medcat-v2/docs/: breaking_changes.md  conf.py  main.md  migration_guide_v2.md  requirements.txt
medcat-v2/medcat/: cat.py  trainer.py  vocab.py
medcat-v2/medcat/cdb/: cdb.py
medcat-v2/medcat/components/: types.py
medcat-v2/medcat/config/: config.py
medcat-v2/medcat/pipeline/: pipeline.py
medcat-v2/medcat/stats/: stats.py
medcat-v2/medcat/storage/: serialisables.py  serialisers.py
medcat-v2/medcat/tokenizing/: tokenizers.py  tokens.py
medcat-v2/medcat/utils/: cdb_state.py  data_utils.py  default_args.py  envsnapshot.py  postprocessing.py  usage_monitoring.py
medcat-v2/medcat2/: __init__.py  cat.py  trainer.py  vocab.py
medcat-v2/medcat2/cdb/: cdb.py  concepts.py
medcat-v2/medcat2/components/: types.py
medcat-v2/medcat2/config/: config.py  config_meta_cat.py  config_rel_cat.py  config_transformers_ner.py
medcat-v2/medcat2/data/: entities.py  mctexport.py
medcat-v2/medcat2/model_creation/: cdb_maker.py
medcat-v2/medcat2/output/: entities.py
medcat-v2/medcat2/pipeline/: pipeline.py
medcat-v2/medcat2/platform/: platform.py
medcat-v2/medcat2/preprocessors/: cleaners.py
medcat-v2/medcat2/stats/: kfold.py  stats.py
medcat-v2/medcat2/storage/: jsonserialiser.py  schema.py  serialisables.py  serialisers.py
medcat-v2/medcat2/tokenizing/: tokenizers.py  tokens.py
medcat-v2/medcat2/utils/: cdb_state.py  config_utils.py  data_utils.py  default_args.py  defaults.py  envsnapshot.py  filters.py  hasher.py  iterutils.py  matutils.py  postprocessing.py  registry.py  usage_monitoring.py  vocab_utils.py
medcat-v2/tests/: __init__.py  test_cat.py  test_trainer.py  test_vocab.py
medcat-v2/tests/backwards_compatibility/: check_backwards_compatibility.sh  run_current.sh
medcat-v2/tests/cdb/: test_cdb.py  test_concepts.py
medcat-v2/tests/components/: helper.py  test_registration.py  test_types.py
medcat-v2/tests/config/: test_config.py
medcat-v2/tests/data/: test_mctexport.py
medcat-v2/tests/linking/: test_context_based_linker.py
medcat-v2/tests/model_creation/: test_cdb_maker.py
medcat-v2/tests/pipeline/: test_pipeline.py
medcat-v2/tests/platform/: test_platform.py
medcat-v2/tests/preprocessors/: test_cleaners.py
medcat-v2/tests/resources/: deid_train_data.json  mct_export_for_meta_cat_full_text.json
medcat-v2/tests/stats/: test_kfold.py  test_stats.py
medcat-v2/tests/storage/: test_jsonserialiser.py  (+3 more)
(+374 files in other folders)
