[project]
name = "medcat2"

version = "2.0.0-dev"

description = "Medical Concept Annotation Toolkit (v2)"

readme = "README.md"

requires-python = ">=3.9"

license = {file = "LICENSE"}

keywords = ["ML", "NLP", "NER+L"]

authors = [
  {name = "Z. Kraljevic"},
  {name = "A. Shek"},
  {name = "T. Searle"},
  {name = "X. Bai"},
  {name = "M. Ratas"},
]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [
  {name = "CogStack", email = "contact@cogstack.org" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Hospital Trust Technical Management",
  "Topic :: Natural Language Processing :: Named Entity Recognition and Linking",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [ # Optional
  "numpy>2.0",
  "dill",
  "spacy",
  "pandas>=2.2,<3.0",
  "tqdm>=4.64,<5.0",
  "xxhash>=3.5.0,<4.0",
  "pydantic>2.0",
  # TODO - others
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies] # Optional
dev = [
  "ruff~=0.1.7",
  "mypy",
  "flake8",
]
test = []  # TODO - list

[project.urls]
"Homepage" = "https://cogstack.org/"
"Bug Reports" = "https://discourse.cogstack.org/"
"Source" = "https://github.com/CogStack/MedCAT/"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
